# Akinator

./: CMakeLists.txt
Akinator/: Akinator.h  BinaryTree.h  StandardFileHandler.h  Strings.h
Akinator/Algo/: StringDistance.cpp  StringDistance.hpp
Examples/: BasicExample.cpp  akinator.db
